# whatever

./: .gitignore
UI/: main.py  main_form.qml
code_generator/: MNIST_traning.json  copy_snippet.py  fc_mnist.json  fc_mnist.py  generated_code.py  json2py.py  simple_conv2d.json  simple_conv2d.py
code_generator/snippets/: User_Defined_1  User_Defined_2  User_Defined_3  additional_part.py  framework.I_have_not_ye_decide  import  import_statements.py
code_generator/snippets/layers/: activation_init  fc_init  layer_init_1  layer_init_2  using
nn_tools/: README.md  test_code.py  usr_defined_network.py
nn_tools/example/: README.md  example_description.json  fc_mnist.json  fc_mnist.py  layers.py  padding_tools.py  test_code.py
render_core/: CMakeLists.txt
socket/cpp/: CMakeLists.txt  client.cpp  server.cpp
socket/py/: client.py  server_1.py  server_2.py
